2023-12-08T08:12:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7138952269 # 2148
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 99 146
* notice: prev accum: outdated-unq outdated-all / unq all: 2018 5842 / 2127 5990
* notice: next accum: outdated-unq outdated-all / unq all: 2018 5842 / 2128 5991
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -3 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-24 2023-12-08]

2023-12-08T00:47:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7135858980 # 2147
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 99 148
* notice: prev accum: outdated-unq outdated-all / unq all: 1984 5799 / 2127 5990
* notice: next accum: outdated-unq outdated-all / unq all: 2018 5842 / 2127 5990
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-23] / []

2023-12-07T16:13:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7130875160 # 2146
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-07
* notice: last 14d: unq all: 105 158
* notice: prev accum: outdated-unq outdated-all / unq all: 1984 5799 / 2118 5979
* notice: next accum: outdated-unq outdated-all / unq all: 1984 5799 / 2127 5990
* notice: prev exec diff / last date diff / accum: unq all: +9 +11 -10 -13 / +24 +31 -0 -0 / 24 31
* notice: removed / changed dates: [] / [2023-11-23 2023-12-07]

2023-12-07T08:12:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7125453818 # 2145