@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-08T08:12:54Z",
-  "count_outdated" : 5842,
-  "uniques_outdated" : 2018,
+  "timestamp" : "2023-12-09T00:45:15Z",
+  "count_outdated" : 5846,
+  "uniques_outdated" : 2020,
   "count" : 5991,
   "uniques" : 2128,
   "clones" : [
-    {
-      "timestamp": "2023-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 2,
