@@ -1,12 +1,7 @@
 {
-  "count": 146,
+  "count": 145,
   "uniques": 99,
   "clones": [
-    {
-      "timestamp": "2023-11-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 2,
